# ErneEngine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  build.sh
.cache/clangd/index/: main.cpp.F64774922CF8BC4C.idx
test/: CMakeLists.txt
test/src/: main.cpp  source.cmake
